@@ -2,6 +2,8 @@ package com.onrank.server.api.service.member;
 
 import com.onrank.server.api.dto.member.AddMemberRequest;
 import com.onrank.server.api.dto.member.MemberListResponse;
+import com.onrank.server.api.dto.member.MemberResponse;
+import com.onrank.server.api.dto.member.MemberRoleResponse;
 import com.onrank.server.api.service.student.StudentService;
 import com.onrank.server.domain.member.Member;
 import com.onrank.server.domain.member.MemberJpaRepository;
@@ -16,7 +18,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 
 @Service
@@ -28,6 +29,11 @@ public class MemberService {
     private final StudyJpaRepository studyRepository;
     private final StudentService studentService;
 
+    public MemberRoleResponse getMyRoleInStudy(String username, Long studyId) {
+        Member member = findByUsernameAndStudyId(username, studyId)
+                .orElseThrow(() -> new IllegalArgumentException("Member not found"));
+        return new MemberRoleResponse(member);
+    }
     /**
      * username과 StudyId에 해당하는 Member 조회
      */
@@ -44,7 +50,7 @@ public class MemberService {
      */
     public boolean isMemberInStudy(String username, Long studyId) {
         Student student = studentService.findByUsername(username)
-                .orElseThrow(() -> new IllegalArgumentException("Student를 찾을 수 없습니다."));
+                .orElseThrow(() -> new IllegalArgumentException("Student not found"));
 
         Long studentId = student.getStudentId();
         return memberRepository.findByStudentStudentIdAndStudyStudyId(studentId, studyId).isPresent();
@@ -55,7 +61,7 @@ public class MemberService {
      */
     public boolean isMemberHost(String username, Long studyId) {
         Student student = studentService.findByUsername(username)
-                .orElseThrow(() -> new IllegalArgumentException("Student를 찾을 수 없습니다."));
+                .orElseThrow(() -> new IllegalArgumentException("Student not found"));
 
         Long studentId = student.getStudentId();
         return memberRepository.findByStudentStudentIdAndStudyStudyId(studentId, studyId)
@@ -64,14 +70,22 @@ public class MemberService {
     }
 
     /**
-     *  DB에서 스터디에 속한 멤버 목록 조회
+     *  스터디에 속한 멤버 목록 조회
      */
-    public List<MemberListResponse> getMembersForStudy(Long studyId) {
+    public MemberListResponse getMembersForStudy(Long studyId) {
 
         List<Member> members = memberRepository.findByStudyStudyId(studyId);
-        return members.stream()
-                .map(MemberListResponse::new)
-                .collect(Collectors.toList());
+        List<MemberResponse> memberResponses = members.stream()
+                .map(MemberResponse::new)
+                .toList();
+
+        // studyName은 member 중 하나에서 꺼냄 (어차피 같은 스터디이므로)
+        String studyName = members.isEmpty() ? null : members.get(0).getStudy().getStudyName();
+
+        return MemberListResponse.builder()
+                .StudyName(studyName)
+                .members(memberResponses)
+                .build();
     }
 
     @Transactional
@@ -93,4 +107,28 @@ public class MemberService {
                 .orElseThrow(() -> new IllegalArgumentException("Member not in Study"));
         member.changeRole(MemberRole.valueOf(newRole));
     }
+
+
+    @Transactional
+    public void deleteMember(Long studyId, Long memberIdToDelete, String usernameOfRequester) {
+        // 삭제할 멤버 조회
+        Member targetMember = memberRepository.findByMemberIdAndStudyStudyId(memberIdToDelete, studyId)
+                .orElseThrow(() -> new IllegalArgumentException("해당 스터디에 멤버가 없습니다."));
+
+        // 요청자 본인의 멤버 객체 조회
+        Member requester = findByUsernameAndStudyId(usernameOfRequester, studyId)
+                .orElseThrow(() -> new IllegalArgumentException("해당 스터디에 소속되지 않은 사용자입니다."));
+
+        // 자기 자신 삭제 방지
+        if (targetMember.getMemberId().equals(requester.getMemberId())) {
+            throw new IllegalArgumentException("자기 자신은 삭제할 수 없습니다.");
+        }
+
+        // HOST는 삭제 불가
+        if (targetMember.getMemberRole().equals(MemberRole.HOST)) {
+            throw new IllegalArgumentException("HOST는 삭제할 수 없습니다.");
+        }
+        memberRepository.delete(targetMember);
+    }
+
 }
